# dup-code-check

./: .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  index.d.ts  index.js  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  docs.yml  release.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: args.rs  json.rs  main.rs  path.rs  text.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: dedupe.rs  duplicates.rs  lib.rs  scan.rs  tokenize.rs  types.rs  util.rs  winnowing.rs
crates/core/src/report/: detect.rs  mod.rs  scan_files.rs  tests.rs  util.rs
crates/core/src/report/detect/: blocks.rs  code_spans.rs  line_spans.rs  mod.rs  similarity.rs  span_groups.rs  token_spans.rs
crates/core/src/scan/: git.rs  mod.rs  read.rs  tests.rs  walker.rs
crates/napi/: Cargo.toml
crates/napi/src/: lib.rs
docs/: README.md  README.zh-CN.md  SUMMARY.md  api.md  architecture.md  architecture.zh-CN.md  book.json  ci.md  ci.zh-CN.md  cli.md  cli.zh-CN.md  competitors.md  competitors.zh-CN.md  contributing.md  contributing.zh-CN.md  detectors.md  detectors.zh-CN.md  development.md  development.zh-CN.md  faq.md  faq.zh-CN.md  getting-started.md  getting-started.zh-CN.md  index.md  index.zh-CN.md  installation.md  installation.zh-CN.md  introduction.md  introduction.zh-CN.md  llms.md  llms.zh-CN.md  output.md  output.zh-CN.md  performance.md  performance.zh-CN.md  roadmap.md  roadmap.zh-CN.md  scan-options.md  scan-options.zh-CN.md  troubleshooting.md  (+1 more)
docs/.vitepress/: config.mts
githooks/: pre-commit
scripts/: build-binary.mjs  build-native.mjs  gate.sh  generate-llms.mjs  postinstall.mjs  prepack.mjs  setup-githooks.sh  smoke.mjs
