[package]
name = "dup-code-check"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Duplication checker CLI."
repository = "https://github.com/omne42/dup-code-check"
homepage = "https://omne42.github.io/dup-code-check/"

[dependencies]
dup-code-check-core = { version = "0.0.1", path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
