[package]
name = "dup-code-check"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Duplication checker CLI."
readme = "README.md"
keywords = ["duplication", "scanner", "cli", "code", "similarity"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
dup-code-check-core = { version = "0.0.1", path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
